--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -350,10 +350,17 @@ df.profit <- dfc %>%
   
 df.profit <- df.profit %>% 
   left_join(dfc %>% filter(Year == 2010) %>% select(ID, ngla_net_gain_loss, ngla_revenue, ngla_expense, Assets, Pct.NHA:Pct.COM) %>% 
-  mutate(profit.class = ifelse(ngla_net_gain_loss / ngla_revenue < 0.017, 1, 
-              ifelse(ngla_net_gain_loss / ngla_revenue >= 0.017 & ngla_net_gain_loss / ngla_revenue <= 0.081, 2, 
-              ifelse(ngla_net_gain_loss / ngla_revenue > 0.081, 3, NA)))) , by = c("ID")) 
+  mutate(pc = ngla_net_gain_loss / ngla_revenue) , by = c("ID")) %>% 
+  filter(`BHCMIS ID` %notin% c("010450","0438280","070430"))
+  
 
+df.profit <- df.profit %>% 
+  mutate(profit.class = ifelse(pc < 0.017, 1, 
+              ifelse(pc >= 0.017 & pc <= 0.081, 2, 
+              ifelse(pc > 0.081, 3, NA))))
+
+splits1 <- c(min(df.profit$pc, na.rm = TRUE), splits)
+splits2 <- c(splits, max(df.profit$pc, na.rm = TRUE))
 
 
 
@@ -364,7 +371,7 @@ for (g in 1:3){
   df.temp <- df.profit[,c(1:9, j, 13:ncol(df.profit))] 
   colnames(df.temp)[10] <- "Outcome"
   outcomes <- did2s(
-      data = df.temp %>% filter(profit.class == g), 
+      data = df.temp %>% filter(pc >= splits1[g] & pc <= splits2[g]), 
       yname = "Outcome", 
       treatment = "Tx",
         first_stage = ~ 0 | ID + Year + Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless + Pct.MCR + Pct.None, 
@@ -385,17 +392,12 @@ mean.nas<- function(x){ mean(x, na.rm = TRUE)}
 
 options(scipen=999)
 
-  did.profit %>% 
-   select(name, `0_0`, `0_1`, `1_0`, `1_1`, Unadjusted, Estimate, `Std. Error`) %>% 
-  mutate(Estimate = round(Estimate, 2), 
-         `95% CI` = paste(round(Estimate - 1.96 * `Std. Error`, 2), ", ", round(Estimate + 1.96 * `Std. Error`, 2), sep = ""), 
-         `% Change` = round(Estimate / `1_0` * 100, 1)) %>% 
-  rename(Outcome = name) %>% 
-  select(Outcome:Estimate, `95% CI`, `% Change`) %>% 
-  kable("html", booktabs = T, col.names = c("Outcome","Pre","Post","Pre","Post","Unadjusted DID","Estimate","95% CI","% Change")) %>% 
-  kable_styling(latex_options = c("striped")) %>%
-  #pack_rows(index = c("Total Patients by Insurnace" = 4, "Quality Measure Components" = 6, "Financial Components" = 4)) %>% 
-  add_header_above(c(" " = 1, "Control" = 2, "Treated" = 2, " " = 1, "Staggered DID" = 3))
+data.frame(Subset = c(rep("Low", 3), rep("Medium", 3), rep("High", 3)),
+      Outcome = rep(c("Total","Quality","Financial"), 3),
+      Estimate = as.numeric(did.profit[,1]), 
+      SD = as.numeric(did.profit[,2]))
+  
+      
 
 ```
 
@@ -443,7 +445,7 @@ df.temp
 
 did2s(
       data = dfc.new %>% 
-        inner_join(dfc %>% filter(Year == 2010 & ngla_net_gain_loss/ngla_revenue > 0.081 ) #& ngla_net_gain_loss/ngla_revenue < 0.03)  ngla_net_gain_loss/Assets < 0.05
+        inner_join(dfc %>% filter(Year == 2010 & ngla_net_gain_loss/ngla_revenue > 0.08 ) #& ngla_net_gain_loss/ngla_revenue < 0.03)  ngla_net_gain_loss/Assets < 0.05
                    %>% select(ID, Pct.NHA:Pct.COM) %>% unique() , by = c("ID")) , 
       yname = "Total", 
       treatment = "Tx",
