--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -328,7 +328,7 @@ df.core %>%
 
 ```{r}
 
-splits <- quantile(dfc[dfc$Year == 2010,]$ngla_net_gain_loss / dfc[dfc$Year == 2010,]$ngla_revenue, c(0.33, 0.66), na.rm = TRUE)
+splits <- quantile(dfc[dfc$Year == 2010,]$ngla_net_gain_loss / dfc[dfc$Year == 2010,]$ngla_expense, c(0.33, 0.66), na.rm = TRUE)
 
 
 df.profit <- dfc %>% 
@@ -350,8 +350,8 @@ df.profit <- dfc %>%
   
 df.profit <- df.profit %>% 
   left_join(dfc %>% filter(Year == 2010) %>% select(ID, ngla_net_gain_loss, ngla_revenue, ngla_expense, Assets, Pct.NHA:Pct.COM) %>% 
-  mutate(pc = ngla_net_gain_loss / ngla_revenue) , by = c("ID")) %>% 
-  filter(`BHCMIS ID` %notin% c("010450","0438280","070430"))
+  mutate(pc = ngla_net_gain_loss / ngla_expense) , by = c("ID")) %>% 
+  filter(`BHCMIS ID` %notin% c("010450","070430"))
   
 
 df.profit <- df.profit %>% 
@@ -359,7 +359,7 @@ df.profit <- df.profit %>%
               ifelse(pc >= 0.017 & pc <= 0.081, 2, 
               ifelse(pc > 0.081, 3, NA))))
 
-splits1 <- c(min(df.profit$pc, na.rm = TRUE), splits)
+splits1 <- c(min(df.profit$pc, na.rm = TRUE)-1, splits)
 splits2 <- c(splits, max(df.profit$pc, na.rm = TRUE))
 
 
@@ -371,7 +371,7 @@ for (g in 1:3){
   df.temp <- df.profit[,c(1:9, j, 13:ncol(df.profit))] 
   colnames(df.temp)[10] <- "Outcome"
   outcomes <- did2s(
-      data = df.temp %>% filter(pc >= splits1[g] & pc <= splits2[g]), 
+      data = df.temp %>% filter(pc > splits1[g] & pc <= splits2[g]), 
       yname = "Outcome", 
       treatment = "Tx",
         first_stage = ~ 0 | ID + Year + Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless + Pct.MCR + Pct.None, 
@@ -392,12 +392,34 @@ mean.nas<- function(x){ mean(x, na.rm = TRUE)}
 
 options(scipen=999)
 
-data.frame(Subset = c(rep("Low", 3), rep("Medium", 3), rep("High", 3)),
+data.frame(Subset = c(rep("01Low", 3), rep("02Medium", 3), rep("03High", 3)),
       Outcome = rep(c("Total","Quality","Financial"), 3),
       Estimate = as.numeric(did.profit[,1]), 
-      SD = as.numeric(did.profit[,2]))
-  
-      
+      SD = as.numeric(did.profit[,2])) %>% 
+  mutate(Subset.f = as.factor(Subset)) %>% 
+  ggplot(aes(y = Subset.f, x = Estimate, xmin = Estimate - SD * 1.95, xmax = Estimate + SD * 1.95)) + 
+  geom_point() + 
+  xlab("Staggered 2-way DID Estimates") + 
+ylab(NULL) + 
+#adds the CIs
+geom_errorbarh(height=.1) +
+
+#sets the scales
+#note that I reverse the y axis to correctly order the effect #sizes based on my index variable
+#scale_x_continuous(limits=c(-2.5,1), breaks = c(-2.5:1), name=xname)+
+#scale_y_continuous(name = "", breaks=1:9, labels = t9.forest$X1, trans="reverse")+
+
+#adding a vertical line at the effect = 0 mark
+geom_vline(xintercept=0, color="black", linetype="dashed", alpha=.5)+
+
+#faceting based on my subgroups
+  #facet_wrap(~X1) +
+facet_grid(~Outcome, scales= "free_x", switch = 'y', space = "free_y") +  
+      theme_tufte_revised()+
+   theme(strip.placement = "outside") +
+#theme(text=element_text(family="Times",size=12, color="black"))+
+theme(panel.spacing = unit(1, "lines")) + 
+  ggtitle("DID Estimates by Baseline Profitiability")
 
 ```
 
@@ -405,6 +427,99 @@ data.frame(Subset = c(rep("Low", 3), rep("Medium", 3), rep("High", 3)),
 
 
 ## Effects startified by clinic size
+
+
+```{r}
+
+splits <- quantile(dfc[dfc$Year == 2010,]$Total, c(0.5), na.rm = TRUE)
+
+
+df.size <- dfc %>% 
+  mutate(MCD = Total * Pct.MCD / 100, 
+         None = Total * Pct.None / 100, 
+         MCR = Total * Pct.MCR / 100, 
+         COM = Total * Pct.COM / 100, 
+         
+         crc.rate = crc.rate * 100, 
+         pap.rate = pap.rate * 100, 
+         childbmi.rate = childbmi.rate * 100, 
+         adultbmi.rate = adultbmi.rate * 100, 
+         htn.rate = htn.rate * 100, 
+         dm.rate = dm.rate * 100) %>% 
+  select(`BHCMIS ID`, value, Tx, Year, Att, Att.random, year.rel, ID, STATE, 
+         Total, Qcomp, Altman) %>%  
+  mutate(Altman = ifelse(is.infinite(Altman), NA, Altman)) %>% 
+  ungroup()#, #pap.rate:dm.total, Liquidity:Altman) 
+  
+df.size <- df.size %>% 
+  left_join(dfc %>% filter(Year == 2010) %>% select(ID, Total, Pct.NHA:Pct.COM) %>% 
+  rename(Size = Total) , by = c("ID")) %>% 
+  filter(`BHCMIS ID` %notin% c("010450","070430"))
+  
+
+splits1 <- c(min(df.size$Size, na.rm = TRUE), splits)
+splits2 <- c(splits, max(df.size$Size, na.rm = TRUE)+1)
+
+
+
+did.size <- c(0, 0, 0, 0)
+for (g in 1:2){
+  for (j in 10:12){
+  
+  df.temp <- df.size[,c(1:9, j, 13:ncol(df.size))] 
+  colnames(df.temp)[10] <- "Outcome"
+  outcomes <- did2s(
+      data = df.temp %>% filter(Size >= splits1[g] & Size < splits2[g]), 
+      yname = "Outcome", 
+      treatment = "Tx",
+        first_stage = ~ 0 | ID + Year + Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless + Pct.MCR + Pct.None, 
+        second_stage = ~ i(Tx, ref = FALSE),
+        cluster_var = "ID",
+      verbose = FALSE
+    )
+  
+  did.size <- rbind(did.size, outcomes$coeftable)
+  
+}}
+
+
+did.size <- did.size[-1,]
+rownames(did.size) <- NULL
+
+mean.nas<- function(x){ mean(x, na.rm = TRUE)}
+
+options(scipen=999)
+
+data.frame(Subset = c(rep("01Below", 3), rep("02Above", 3)),
+      Outcome = rep(c("Total","Quality","Financial"), 2),
+      Estimate = as.numeric(did.size[,1]), 
+      SD = as.numeric(did.size[,2])) %>% 
+  mutate(Subset.f = as.factor(Subset)) %>% 
+  ggplot(aes(y = Subset.f, x = Estimate, xmin = Estimate - SD * 1.96, xmax = Estimate + SD * 1.96)) + 
+  geom_point() + 
+  xlab("Staggered 2-way DID Estimates") + 
+ylab(NULL) + 
+#adds the CIs
+geom_errorbarh(height=.1) +
+
+#sets the scales
+#note that I reverse the y axis to correctly order the effect #sizes based on my index variable
+#scale_x_continuous(limits=c(-2.5,1), breaks = c(-2.5:1), name=xname)+
+#scale_y_continuous(name = "", breaks=1:9, labels = t9.forest$X1, trans="reverse")+
+
+#adding a vertical line at the effect = 0 mark
+geom_vline(xintercept=0, color="black", linetype="dashed", alpha=.5)+
+
+#faceting based on my subgroups
+  #facet_wrap(~X1) +
+facet_grid(~Outcome, scales= "free_x", switch = 'y', space = "free_y") +  
+      theme_tufte_revised()+
+   theme(strip.placement = "outside") +
+#theme(text=element_text(family="Times",size=12, color="black"))+
+theme(panel.spacing = unit(1, "lines")) + 
+  ggtitle("DID Estimates by Baseline Clinics Size")
+```
+
 
 
 ## Changes in geographic distribution of resources by Distance to competitive zip
@@ -445,9 +560,9 @@ df.temp
 
 did2s(
       data = dfc.new %>% 
-        inner_join(dfc %>% filter(Year == 2010 & ngla_net_gain_loss/ngla_revenue > 0.08 ) #& ngla_net_gain_loss/ngla_revenue < 0.03)  ngla_net_gain_loss/Assets < 0.05
+        inner_join(dfc %>% filter(Year == 2010 & Total < 14000 ) #& ngla_net_gain_loss/ngla_revenue < 0.03)  ngla_net_gain_loss/Assets < 0.05
                    %>% select(ID, Pct.NHA:Pct.COM) %>% unique() , by = c("ID")) , 
-      yname = "Total", 
+      yname = "Altman", 
       treatment = "Tx",
         first_stage = ~ 0 | ID + Year + Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless + Pct.MCD + Pct.MCR + Pct.None, 
         second_stage = ~ i(Tx, ref = FALSE),
