--- a/code/data_cleaning_longer.Rmd
+++ b/code/data_cleaning_longer.Rmd
@@ -983,7 +983,7 @@ clinics.comp <- uds.sites.full[!is.na(uds.sites.full$Zip),] %>%
   group_by(`BHCMIS ID`, Year) %>% 
   summarise(Clinics = max(Clinics)) %>% 
   pivot_wider(id_cols = `BHCMIS ID`, names_from = Year, values_from = Clinics) %>% 
-  filter(`2010` == 1 & `2011` == 1 ) %>%   
+  filter(`2010` == 1 & `2011` == 1 & `2012` == 1) %>%   
   #filter(`2014` == 1 & `2015` == 1) %>%  
   #left_join(chc.term, by = c("BHCMIS ID" = "ClinicID")) %>%
   #filter(is.na(NewClinicID)) %>%
@@ -1044,7 +1044,7 @@ dfc <- dfc %>%
                Altman = 6.56 * Liquidity + 3.26 * Profitability + 6.72 * Efficiency + 1.05 * NetWorth) %>% 
   mutate(Att.random = ifelse(Att > 0, Att, NA)) 
 
-vec.atts <- rep(c(2012:2021), (table(comp.initial$Att) / 12)[-1])
+vec.atts <- rep(c(2013:2021), (table(comp.initial$Att) / 12)[-1])
 
 set.seed(123)
 dfc <- rbind(dfc %>% filter(Att > 0), dfc %>% 
