--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -14,6 +14,8 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 
+
+
 ```{r}
 
 
@@ -139,6 +141,19 @@ did2s(
 
 
 # Redo the analysis
+
+```{r}
+library(readxl)
+library(did2s)
+library(tidyverse)
+
+```
+
+
+
+```{r}
+dfc <- read_csv("/Users/jhm65/Dropbox/Git/Competition/data_processed/analyticalfile.csv")
+```
 
 ## Balance between treated and controls
 ```{r}
@@ -350,8 +365,7 @@ df.profit <- dfc %>%
   
 df.profit <- df.profit %>% 
   left_join(dfc %>% filter(Year == 2010) %>% select(ID, ngla_net_gain_loss, ngla_revenue, ngla_expense, Assets, Pct.NHA:Pct.COM) %>% 
-  mutate(pc = ngla_net_gain_loss / ngla_expense) , by = c("ID")) %>% 
-  filter(`BHCMIS ID` %notin% c("010450","070430"))
+  mutate(pc = ngla_net_gain_loss / ngla_expense) , by = c("ID")) %>% filter(`BHCMIS ID` %notin% c("010450","070430"))
   
 
 df.profit <- df.profit %>% 
