--- a/code/analysis_Redo.Rmd
+++ b/code/analysis_Redo.Rmd
@@ -152,7 +152,7 @@ library(tidyverse)
 
 
 ```{r}
-dfc <- read_csv("/Users/jhm65/Dropbox/Git/Competition/data_processed/analyticalfile.csv")
+#dfc <- read_csv("/Users/jhm65/Dropbox/Git/Competition/data_processed/analyticalfile.csv")
 ```
 
 ## Balance between treated and controls
@@ -199,15 +199,13 @@ did.core <- c(0, 0, 0, 0)
 
 for (j in 10:12){
   
-  df.temp <- df.core[,c(1:9, j)]
+  df.temp <- df.core[,c(1:9, j, 13:ncol(df.core))]
   colnames(df.temp)[10] <- "Outcome"
   outcomes <- did2s(
-      data = df.temp %>% 
-        inner_join(df.core[,c(4, 8, 13:ncol(df.core))] %>% filter(Year == 2010 ) #& ngla_net_gain_loss/ngla_revenue < 0.03)  ngla_net_gain_loss/Assets < 0.05
-                   %>% select(ID, Pct.NHA:Pct.COM) %>% unique() , by = c("ID")) , 
+      data = df.temp , 
       yname = "Outcome", 
       treatment = "Tx",
-        first_stage = ~ 0 | ID + Year + Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless + Pct.MCD + Pct.MCR + Pct.None, 
+        first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.MCD + Pct.MCR + Pct.None | ID + Year, 
         second_stage = ~ i(Tx, ref = FALSE),
         cluster_var = "ID",
       verbose = FALSE
@@ -283,15 +281,13 @@ did.core <- c(0, 0, 0, 0)
 
 for (j in 10:23){
   
-  df.temp <- df.core[,c(1:9, j)]
+  df.temp <- df.core[,c(1:9, j, 24:ncol(df.core))]
   colnames(df.temp)[10] <- "Outcome"
   outcomes <- did2s(
-      data = df.temp %>% 
-        inner_join(df.core[,c(4, 8, 24:ncol(df.core))] %>% filter(Year == 2010 ) #& ngla_net_gain_loss/ngla_revenue < 0.03)  ngla_net_gain_loss/Assets < 0.05
-                   %>% select(ID, Pct.NHA:Pct.COM) %>% unique() , by = c("ID")) , 
+      data = df.temp, 
       yname = "Outcome", 
       treatment = "Tx",
-        first_stage = ~ 0 | ID + Year + Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless + Pct.MCD + Pct.MCR + Pct.None, 
+        first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.MCD + Pct.MCR + Pct.None | ID + Year , 
         second_stage = ~ i(Tx, ref = FALSE),
         cluster_var = "ID",
       verbose = FALSE
@@ -343,8 +339,8 @@ df.core %>%
 
 ```{r}
 
-splits <- quantile(dfc[dfc$Year == 2010,]$ngla_net_gain_loss / dfc[dfc$Year == 2010,]$ngla_expense, c(0.33, 0.66), na.rm = TRUE)
-
+#splits <- quantile(dfc[dfc$Year == 2011,]$ngla_net_gain_loss / dfc[dfc$Year == 2010,]$ngla_expense, c(0.5), na.rm = TRUE)
+splits <- quantile(dfc[dfc$year.rel == -1,]$ngla_net_gain_loss / dfc[dfc$year.rel == -1,]$ngla_expense, c(0.5), na.rm = TRUE)
 
 df.profit <- dfc %>% 
   mutate(MCD = Total * Pct.MCD / 100, 
@@ -359,19 +355,14 @@ df.profit <- dfc %>%
          htn.rate = htn.rate * 100, 
          dm.rate = dm.rate * 100) %>% 
   select(`BHCMIS ID`, value, Tx, Year, Att, Att.random, year.rel, ID, STATE, 
-         Total, Qcomp, Altman) %>%  
+         Total, Qcomp, Altman, Pct.NHA:Pct.COM) %>%  
   mutate(Altman = ifelse(is.infinite(Altman), NA, Altman)) %>% 
   ungroup()#, #pap.rate:dm.total, Liquidity:Altman) 
   
 df.profit <- df.profit %>% 
-  left_join(dfc %>% filter(Year == 2010) %>% select(ID, ngla_net_gain_loss, ngla_revenue, ngla_expense, Assets, Pct.NHA:Pct.COM) %>% 
-  mutate(pc = ngla_net_gain_loss / ngla_expense) , by = c("ID")) %>% filter(`BHCMIS ID` %notin% c("010450","070430"))
+  left_join(dfc %>% filter(year.rel == -1) %>% select(ID, ngla_net_gain_loss, ngla_revenue, ngla_expense, Assets) %>% 
+  mutate(pc = ngla_net_gain_loss / ngla_expense) , by = c("ID")) # %>% filter(`BHCMIS ID` %notin% c("010450","070430"))
   
-
-df.profit <- df.profit %>% 
-  mutate(profit.class = ifelse(pc < 0.017, 1, 
-              ifelse(pc >= 0.017 & pc <= 0.081, 2, 
-              ifelse(pc > 0.081, 3, NA))))
 
 splits1 <- c(min(df.profit$pc, na.rm = TRUE)-1, splits)
 splits2 <- c(splits, max(df.profit$pc, na.rm = TRUE))
@@ -379,7 +370,7 @@ splits2 <- c(splits, max(df.profit$pc, na.rm = TRUE))
 
 
 did.profit <- c(0, 0, 0, 0)
-for (g in 1:3){
+for (g in 1:(length(splits) + 1)){
   for (j in 10:12){
   
   df.temp <- df.profit[,c(1:9, j, 13:ncol(df.profit))] 
@@ -388,7 +379,7 @@ for (g in 1:3){
       data = df.temp %>% filter(pc > splits1[g] & pc <= splits2[g]), 
       yname = "Outcome", 
       treatment = "Tx",
-        first_stage = ~ 0 | ID + Year + Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless + Pct.MCR + Pct.None, 
+        first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.MCD + Pct.MCR + Pct.None | ID + Year , 
         second_stage = ~ i(Tx, ref = FALSE),
         cluster_var = "ID",
       verbose = FALSE
@@ -406,8 +397,11 @@ mean.nas<- function(x){ mean(x, na.rm = TRUE)}
 
 options(scipen=999)
 
-data.frame(Subset = c(rep("01Low", 3), rep("02Medium", 3), rep("03High", 3)),
-      Outcome = rep(c("Total","Quality","Financial"), 3),
+
+
+
+data.frame(Subset = sort(rep(1:(length(splits) + 1), 3)),
+      Outcome = rep(c("Total","Quality","Financial"), (length(splits) + 1)),
       Estimate = as.numeric(did.profit[,1]), 
       SD = as.numeric(did.profit[,2])) %>% 
   mutate(Subset.f = as.factor(Subset)) %>% 
@@ -439,13 +433,12 @@ theme(panel.spacing = unit(1, "lines")) +
 
 
 
-
 ## Effects startified by clinic size
-
-
 ```{r}
 
-splits <- quantile(dfc[dfc$Year == 2010,]$Total, c(0.5), na.rm = TRUE)
+#splits <- quantile(dfc[dfc$Year == 2011,]$Total, c(0.5), na.rm = TRUE)
+splits <- quantile(dfc[dfc$year.rel == -1,]$Total, c(0.5), na.rm = TRUE)
+
 
 
 df.size <- dfc %>% 
@@ -461,32 +454,31 @@ df.size <- dfc %>%
          htn.rate = htn.rate * 100, 
          dm.rate = dm.rate * 100) %>% 
   select(`BHCMIS ID`, value, Tx, Year, Att, Att.random, year.rel, ID, STATE, 
-         Total, Qcomp, Altman) %>%  
+         Total, Qcomp, Altman, Pct.NHA:Pct.COM) %>%  
   mutate(Altman = ifelse(is.infinite(Altman), NA, Altman)) %>% 
   ungroup()#, #pap.rate:dm.total, Liquidity:Altman) 
   
 df.size <- df.size %>% 
-  left_join(dfc %>% filter(Year == 2010) %>% select(ID, Total, Pct.NHA:Pct.COM) %>% 
-  rename(Size = Total) , by = c("ID")) %>% 
-  filter(`BHCMIS ID` %notin% c("010450","070430"))
+  left_join(dfc %>% filter(Year == 2010) %>% select(ID, Total) %>% 
+  mutate(Size = Total) , by = c("ID")) # %>% filter(`BHCMIS ID` %notin% c("010450","070430"))
   
 
-splits1 <- c(min(df.size$Size, na.rm = TRUE), splits)
-splits2 <- c(splits, max(df.size$Size, na.rm = TRUE)+1)
+splits1 <- c(min(df.size$Size, na.rm = TRUE)-1, splits)
+splits2 <- c(splits, max(df.size$Size, na.rm = TRUE))
 
 
 
 did.size <- c(0, 0, 0, 0)
-for (g in 1:2){
+for (g in 1:(length(splits) + 1)){
   for (j in 10:12){
   
   df.temp <- df.size[,c(1:9, j, 13:ncol(df.size))] 
   colnames(df.temp)[10] <- "Outcome"
   outcomes <- did2s(
-      data = df.temp %>% filter(Size >= splits1[g] & Size < splits2[g]), 
+      data = df.temp %>% filter(Size > splits1[g] & Size <= splits2[g]), 
       yname = "Outcome", 
       treatment = "Tx",
-        first_stage = ~ 0 | ID + Year + Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless + Pct.MCR + Pct.None, 
+        first_stage = ~ Pct.NHA + Pct.NHB + Pct.HL + Pct.LessThan100pctFPL + Pct.FarmWorker + Pct.Homeless + Pct.MCD + Pct.MCR + Pct.None | ID + Year , 
         second_stage = ~ i(Tx, ref = FALSE),
         cluster_var = "ID",
       verbose = FALSE
@@ -504,12 +496,15 @@ mean.nas<- function(x){ mean(x, na.rm = TRUE)}
 
 options(scipen=999)
 
-data.frame(Subset = c(rep("01Below", 3), rep("02Above", 3)),
-      Outcome = rep(c("Total","Quality","Financial"), 2),
+
+
+
+data.frame(Subset = sort(rep(1:(length(splits) + 1), 3)),
+      Outcome = rep(c("Total","Quality","Financial"), (length(splits) + 1)),
       Estimate = as.numeric(did.size[,1]), 
       SD = as.numeric(did.size[,2])) %>% 
   mutate(Subset.f = as.factor(Subset)) %>% 
-  ggplot(aes(y = Subset.f, x = Estimate, xmin = Estimate - SD * 1.96, xmax = Estimate + SD * 1.96)) + 
+  ggplot(aes(y = Subset.f, x = Estimate, xmin = Estimate - SD * 1.95, xmax = Estimate + SD * 1.95)) + 
   geom_point() + 
   xlab("Staggered 2-way DID Estimates") + 
 ylab(NULL) + 
@@ -531,8 +526,12 @@ facet_grid(~Outcome, scales= "free_x", switch = 'y', space = "free_y") +
    theme(strip.placement = "outside") +
 #theme(text=element_text(family="Times",size=12, color="black"))+
 theme(panel.spacing = unit(1, "lines")) + 
-  ggtitle("DID Estimates by Baseline Clinics Size")
+  ggtitle("DID Estimates by Baseline Size")
+
 ```
+
+
+
 
 
 
